fix: configure cache with redis
